# streamlit-simpleplayer

./: .editorconfig  .gitignore  README.md  pyproject.toml  streamlit_app.py
data/: episodes.csv
streamlit_simpleplayer/: app.py
